@@ -1,7 +1,9 @@
 AUX 1.6.3-unaligned_pointers.patch 2252 RMD160 2f5112c335d8d4b71d6c0bc5cf978e8a514757c1 SHA1 9c3ccbb2176903ec2b0335fe4cfcb5472840a0fa SHA256 c0b6e645c07f00a175efc12ca6967289fa6345840a8aacc5ac18a776d96408bd
 DIST aria2-1.6.3.tar.bz2 1334838 RMD160 4a2b0d88563a526e257248837d7517bbba9405fc SHA1 5a3afab9751dcc59a90c543c26a187f931b18325 SHA256 a5ecde46c8cf2bb3e17f0930c027c3a9f8907c1c2428b0827e5ef67fbfb3d022
 DIST aria2-1.8.2.tar.bz2 1417606 RMD160 3657c543c5f75861829e7c55f1dd89efd8835b5d SHA1 bc4d31ddd366ff528837c2d163bc7fea4c58a31a SHA256 42ff7e22298c2d1fdc99a1354109009e625cc6410c44db2c6f7299bebe2b5500
+DIST aria2-1.8.3.tar.bz2 1417916 RMD160 0ddc9800b14dcdaad7933fc8ad07d9fd9367a7a5 SHA1 9ebd9b996ce1f86cc1b3e84d5cd236fee84d42f5 SHA256 ac3d02ff69714ff0e3bb00c4cb18cc2a0f93cf40787b2fad68322d1abc44578c
 EBUILD aria2-1.6.3.ebuild 2327 RMD160 fe6b54710d61263a1755cd4f7e023290ac69f222 SHA1 1a420dea936aaa9250d9dff3dcdfa8e65c5090b0 SHA256 ff2cd6bce65b2ed09d222ce187d903a879fbf063ad6ac10fb19d85850bf93e1f
 EBUILD aria2-1.8.2.ebuild 2758 RMD160 c8b963902bf74ddaf0eb02043ff125290fc51d7f SHA1 275a7fe88711450daf196c1055fb01398b84522b SHA256 301ba9932c0050d7f7183a077165cafee0242eb5d75461c850470eb6ab98524d
-MISC ChangeLog 11518 RMD160 220c731aecc68e3e73787994f60bd6e5bf734852 SHA1 c43b1f13865bf6d02221503418206163ab94adff SHA256 128064c2493b2b3bc86f98c7eb95296d07e0855880cdb3defb498ae5f821f3c4
+EBUILD aria2-1.8.3.ebuild 2758 RMD160 e7a3fc8aba53693dc27a249f766f0589a974e573 SHA1 036ff7e217a4246ece318cb3d59540acb3eaba46 SHA256 5c439cbf66a3f904291647f1811aeef542a7049a1cc0501179d703efb81c0ca6
+MISC ChangeLog 11637 RMD160 257564eba1416ea2b0649887888897fa38cfc4fe SHA1 ec0e580c8f4eb8ead3f562e39d4606f7729a87de SHA256 89dfaa0caab020b3e59d3be6df4690e534f5a2df9f6a7d19b5efad1d9adb934a
 MISC metadata.xml 691 RMD160 4b77011d394f4c6cdded3dc4109464b510117551 SHA1 e8a3a1e9b875172fce356ef1a7b12711dae00fa6 SHA256 48aec8260bd012ac9380925b738db3ab06278028668b133869057b8a6de8a11d
