@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/aria2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.56 2010/02/06 06:46:22 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/aria2/ChangeLog,v 1.57 2010/02/22 10:37:32 dev-zero Exp $
+
+*aria2-1.8.3 (22 Feb 2010)
+
+  22 Feb 2010; Tiziano Müller <dev-zero@gentoo.org> +aria2-1.8.3.ebuild:
+  Version bump.
 
   06 Feb 2010; Tiziano Müller <dev-zero@gentoo.org> metadata.xml:
   Added upstream info.
